--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.17.2",
     "express": "^4.15.4",
     "express-promise-router": "^2.0.0",
+    "joi": "^10.6.0",
     "morgan": "^1.8.2",
     "nodemon": "^1.11.0"
   }
